--- a/frontend/werewolves-app/src/styles.scss
+++ b/frontend/werewolves-app/src/styles.scss
@@ -13,6 +13,7 @@ body {
   color: #495057;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 :root {
